--- a/_variables-fonts.sass
+++ b/_variables-fonts.sass
@@ -1,10 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Arapey|Source+Sans+Pro:200,300,300i,400,700,900|Karla:400,700|Montserrat:300,400,700,900|Permanent+Marker|Playfair+Display:400,700,900|Prata|PT+Serif:400,400i,700')
+@import url('https://fonts.googleapis.com/css?family=Arapey|Source+Sans+Pro:200,300,300i,400,700,900|Karla:400|Montserrat:300,400,700,900|Playfair+Display:400,700,900|Prata|PT+Serif:400,400i,700')
 
+$font-sans: "Helvetica Neue", Helvetica, Arial, sans-serif
+
+$font-sss: "Source Sans Pro", $font-sans
+$font-mont: "Montserrat", $font-sans
+$font-karla: "Karla", $font-sans
 
 // ----- SANS -----
+// Karla:400,700|
+// Montserrat:300,400,700,900|
 // Oswald:300,400,500,600,700|
-// Source+Sans+Pro:200,300,300i,400,700|
+// Permanent+Marker|
+// Source+Sans+Pro:200,300,300i,400,400i,700,900|
 // Cormorant+Infant:300,400,400i,600,700,700i|
+
+// ----- SERIF -----
+// Arapey|
+// Cormorant+Infant:300,400,400i,600,700,700i|
+// Playfair+Display:400,700,900|
+// Prata|
+// PT+Serif:400,400i,700|
+
+
 
 // ----- Opacity Recommendations -----
 //
@@ -19,3 +36,20 @@
 // Secondary text                    70%
 // Disabled text, hint text, icons   50%
 // Dividers                          12%
+
+%text-divider-opacity
+  opacity: 0.12
+
+%text-dark-primary-opacity
+  opacity: 0.87
+%text-dark-secondary-opacity
+  opacity: 0.54
+%text-dark-disabled-opacity
+  opacity: 0.38
+
+%text-light-primary-opacity
+  opacity: 1.0
+%text-light-secondary-opacity
+  opacity: 0.70
+%text-light-disabled-opacity
+  opacity: 0.50
